Fixed issue of overlapping switches

--- a/app/assets/stylesheets/users.css
+++ b/app/assets/stylesheets/users.css
@@ -58,14 +58,6 @@ form {
   /*width: 75%;*/
   margin: 0 auto;
 }
-label {
-  color: #ffffff;
-  font-size: 16px;
-  text-align: left;
-  margin-left: 5px;
-  vertical-align: top;
-  float: right;
-}
 .label {
   color: #ffffff;
   font-size: 16px;
